deleted:    application/models.py 	deleted:    application/urls.py 	deleted:    application/views.py 	modified:   db.sqlite3 	renamed:    application/__init__.py -> main/__init__.py 	new file:   main/__pycache__/__init__.cpython-312.pyc 	new file:   main/__pycache__/admin.cpython-312.pyc 	new file:   main/__pycache__/apps.cpython-312.pyc 	new file:   main/__pycache__/forms.cpython-312.pyc 	new file:   main/__pycache__/models.cpython-312.pyc 	new file:   main/__pycache__/urls.cpython-312.pyc 	new file:   main/__pycache__/views.cpython-312.pyc 	renamed:    application/admin.py -> main/admin.py 	renamed:    application/apps.py -> main/apps.py 	new file:   main/forms.py 	new file:   main/migrations/0001_initial.py 	renamed:    application/migrations/__init__.py -> main/migrations/__init__.py 	new file:   main/migrations/__pycache__/0001_initial.cpython-312.pyc 	new file:   main/migrations/__pycache__/__init__.cpython-312.pyc 	new file:   main/models.py 	renamed:    application/tests.py -> main/tests.py 	new file:   main/urls.py 	new file:   main/views.py 	modified:   startUP/__pycache__/settings.cpython-312.pyc 	modified:   startUP/__pycache__/urls.cpython-312.pyc 	modified:   startUP/settings.py 	deleted:    startUP/templates/index.html 	modified:   startUP/urls.py 	new file:   static/images/logo.png 	new file:   templates/about.html 	new file:   templates/advertisement_request.html 	renamed:    startUP/templates/base.html -> templates/base.html 	new file:   templates/index.html 	new file:   templates/login.html 	new file:   templates/register.html 	new file:   templates/success_page.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% load static %}
+    <link rel="icon" href="{% static 'images/logo.png' %}"><!--иконка страницы-->
+    <title>ＡｄＡｇ | {% block title %}{% endblock %}</title>
     {%block links%}
+    
     {%endblock%}
-    <link rel="icon" href="{{ url_for('static', filename='image/web-icon.png')}}"><!--иконка страницы-->
-    <title>ＡｄｄＡｙ | {% block title %}{% endblock %}</title>
+    
 </head>
 
 <body>
