new file:   .gitignore 	modified:   db.sqlite3 	modified:   main/models.py 	modified:   main/views.py 	new file:   requirements.txt 	modified:   startUP/settings.py 	modified:   templates/login.html 	modified:   templates/register.html

--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
 {% block title %}Авторизация{% endblock %}
 
 {% block body %}
-<form action="{% url 'logining' %}" method="post" id="log">
+<form action="{% url 'login' %}" method="post" id="log">
     {% csrf_token %}
     <h2>Авторизация</h2>
     <div class="inputbox">
