--- a/templates/register.html
+++ b/templates/register.html
@@ -8,7 +8,7 @@
 {% block title %}Регистрация{% endblock %}
 
 {% block body %}
-<form action="{% url 'registering' %}" method="post" id="reg">
+<form action="{% url 'register' %}" method="post" id="reg">
     {% csrf_token %}
     <h2>Регистрация</h2>
     <div class="inputbox">
@@ -37,7 +37,7 @@
     </div>
     <button name="button">Зарегистрироваться</button>
     <div class="register">
-        <p>Есть аккаунт?<a href="/logining"> Войти</a></p>
+        <p>Есть аккаунт?<a href="{% url 'login' %}"> Войти</a></p>
     </div>
 </form>
 {% endblock %}
