modified:   main/__pycache__/models.cpython-312.pyc 	modified:   main/__pycache__/urls.cpython-312.pyc 	modified:   main/__pycache__/views.cpython-312.pyc 	modified:   main/urls.py 	modified:   main/views.py 	modified:   startUP/__pycache__/settings.cpython-312.pyc 	new file:   static/css/message.css 	modified:   templates/base.html 	modified:   templates/login.html 	new file:   templates/profile.html

--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
         <ion-icon name="person-outline"></ion-icon>
     
         <label for="login">Логин/Почта:</label>
-        <input id="login" name="login" type="text" value="{{ login_email }}">
+        <input id="login" name="login" type="text" value="{{ login }}">
     </div>
     <div class="inputbox">
         <ion-icon name="lock-closed-outline"></ion-icon>
@@ -28,4 +28,12 @@
         <p>Нет аккаунта?<a href="/registering"> Регистрация</a></p>
     </div>
 </form>
+
+{% if messages %}
+    <ul class="messages">
+      {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+      {% endfor %}
+    </ul>
+  {% endif %}
 {% endblock %}
