--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,23 @@
     <link rel="icon" href="{% static 'images/logo.png' %}"><!--иконка страницы-->
     <title>ＡｄＡｇ | {% block title %}{% endblock %}</title>
     {%block links%}
-    
+
     {%endblock%}
-    
+
 </head>
 
 <body>
     {% block body %}
     {% endblock %}
+
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
+            {% endfor %}
+    </ul>
+    {% endif %}
+
 </body>
 
 </html>
