modified:   main/__pycache__/views.cpython-312.pyc 	modified:   main/views.py 	modified:   startUP/__pycache__/settings.cpython-312.pyc 	modified:   startUP/settings.py 	modified:   static/css/message.css 	modified:   templates/base.html 	modified:   templates/login.html 	modified:   templates/profile.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
     {% load static %}
+    <link rel="stylesheet" href="{% static 'css/message.css' %}">
     <link rel="icon" href="{% static 'images/logo.png' %}"><!--иконка страницы-->
     <title>ＡｄＡｇ | {% block title %}{% endblock %}</title>
     {%block links%}
@@ -17,14 +21,34 @@
     {% block body %}
     {% endblock %}
 
-    {% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-        <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-            {% endfor %}
-    </ul>
-    {% endif %}
-
 </body>
+<script>
+    $(document).ready(function(){
+        {% if messages %}
+            {% for message in messages %}
+                toastr["{{ message.tags }}"]("{{ message }}");
+            {% endfor %}
+        {% endif %}
+
+        toastr.options = {
+            "closeButton": true,
+            "debug": false,
+            "newestOnTop": true,
+            "progressBar": true,
+            "positionClass": "toast-top-right",
+            "preventDuplicates": false,
+            "onclick": null,
+            "showDuration": "300",
+            "hideDuration": "1000",
+            "timeOut": "5000",
+            "extendedTimeOut": "1000",
+            "showEasing": "swing",
+            "hideEasing": "linear",
+            "showMethod": "fadeIn",
+            "hideMethod": "fadeOut"
+        }
+    });
+</script>
+
 
 </html>
