--- a/static/css/message.css
+++ b/static/css/message.css
@@ -1,19 +1,30 @@
+
+body{
+    background-color: aquamarine;
+}
+
 .messages {
-    list-style-type: none;
+    list-style: none;
     padding: 0;
 }
 
 .messages li {
-    padding: 10px;
-    margin: 5px 0;
-}
-
-.messages li.success {
     background-color: #d4edda;
     color: #155724;
+    padding: 10px;
+    border: 1px solid #c3e6cb;
+    margin-bottom: 10px;
+    border-radius: 5px;
 }
 
 .messages li.error {
     background-color: #f8d7da;
     color: #721c24;
+    border-color: #f5c6cb;
+}
+
+.messages li.success {
+    background-color: #d4edda;
+    color: #155724;
+    border-color: #c3e6cb;
 }
