--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,17 +1,19 @@
 {% extends 'base.html' %}
 
-{% block content %}
-  <h1>Профиль пользователя {{ request.user.username }}</h1>
+{% block body %}
+<h1>Профиль пользователя {{ request.user.username }}</h1>
 
-  <h2>Ваши заявки:</h2>
-  <ul>
-    {% for request in ad_requests %}
-      <li>{{ request.ad_content }} — создано {{ request.created_at }}</li>
-    {% empty %}
-      <li>У вас нет заявок.</li>
-    {% endfor %}
-  </ul>
-
-  <a href="{% url 'logout' %}">Выйти из аккаунта</a>
+<h2>Ваши заявки:</h2>
+<ul>
+  {% for request in ad_requests %}
+    <li>{{ request.ad_content }} — создано {{ request.created_at }}</li>
+  {% empty %}
+    <li>У вас нет заявок.</li>
+  {% endfor %}
+</ul>
+<form method="POST" action="{% url 'logout' %}">
+  {% csrf_token %}
+  <button type="submit">Выйти из аккаунта</button>
+</form>
 
 {% endblock %}
