--- a/templates/register.html
+++ b/templates/register.html
@@ -8,7 +8,7 @@
 {% block title %}Регистрация{% endblock %}
 
 {% block body %}
-<form action="{% url 'register' %}" method="post" id="reg">
+<form action="{% url 'registering' %}" method="post" id="reg">
     {% csrf_token %}
     <h2>Регистрация</h2>
     <div class="inputbox">
