modified:   db.sqlite3 	modified:   main/admin.py 	new file:   main/migrations/0002_advertisementrequest_is_completed.py 	new file:   main/migrations/0003_user_is_active_user_is_staff.py 	modified:   main/models.py 	modified:   main/urls.py 	modified:   main/views.py 	new file:   static/css/admins.css 	modified:   static/css/message.css 	new file:   templates/admin_ad_requests.html 	modified:   templates/base.html 	modified:   templates/index.html 	modified:   templates/login.html 	modified:   templates/profile.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,5 +7,12 @@
 {% block title %}Главная{% endblock %}
 
 {% block body %}
-<p>Главная страница</p>
+<h4>Главная страница</h4>
+<div class="menu">
+    <a href="{% url 'home' %}">На главную</a>
+    <a href="{% url 'advertisement_request' %}">Оставить заявку</a>
+    <a href="{% url 'profile' %}">В профиль</a>
+    <a href="{% url 'login' %}">Авторизация</a>
+    <a href="{% url 'register' %}">Регистрация</a>
+</div>
 {% endblock %}
